Add deadlock scenario if syncurity condition uses locks.